--- a/SH-Photography-UI-Net/ClientApp/public/index.html
+++ b/SH-Photography-UI-Net/ClientApp/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SH_Photography_UI_Net</title>
+    <title>Stuart Hopwood Photography</title>
   </head>
   <body>
     <noscript>
