--- a/SH-Photography-UI-Net/ClientApp/public/index.html
+++ b/SH-Photography-UI-Net/ClientApp/public/index.html
@@ -12,6 +12,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="preconnect" href="https://lh3.googleusercontent.com">
+  <link rel="preconnect" href="https://sh-photography.azurewebsites.net">
   <!--
     Notice the use of %PUBLIC_URL% in the tags above.
     It will be replaced with the URL of the `public` folder during the build.
